[metadata]
name = zero-true
author = Zero-True
author_email = support@zero-true.com
home-page = https://zero-true.com
license = Apache License 2.0
license_files = LICENSE
description = A collaborative notebook built for data scientists
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.dev66


[options]
include_package_data = true
packages = find:
install_requires = 
    fastapi<=0.109.2
    uvicorn[standard]<=0.27.1
    pydantic<=2.6.1
    astroid<=3.0.3
    pandas>=2.0.3, <=2.2.0
    duckdb<=0.10.0
    matplotlib<=3.8.3
    plotly<=5.19.0
    pydantic-settings<=2.2.0
    typer<=0.9.0
    rich<=13.7.0
    requests<=2.31.0
    lock-requirements<=0.1.1
    rtoml==0.9
    jedi<=0.19.1
    setuptools<=68.2.2
python_requires = >=3.8

[options.extras_require]
test =
    pytest<=8.0.1
    selenium<=4.18.0
    webdriver_manager<=4.0.1
dev = 
    autodoc_pydantic<=2.0.1
    furo<=2024.1.29

[options.entry_points]
console_scripts = 
    zero-true = zt_cli.cli:cli_app
    zero-true-dev = zt_dev_cli.cli:cli_app
