[metadata]
name = zero-true
author = Zero-True
author_email = support@zero-true.com
home-page = https://zero-true.com
license = Apache License 2.0
license_files = LICENSE
description = A collaborative notebook built for data scientists
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.5.3

[options]
include_package_data = true
packages = find:
install_requires = 
    fastapi<=0.115.6
    uvicorn[standard]<=0.34.0
    pydantic<=2.10.5
    astroid<=3.3.8
    duckdb<=1.1.3
    typer<=0.15.1
    rich<=13.9.4
    requests<=2.32.3
    rtoml==0.12.0
    jedi<=0.19.2
    python-multipart<=0.0.20
    ruff<=0.9.0
python_requires = >=3.9

[options.packages.find]
exclude = 
    zt_backend.tests

[options.exclude_package_data]
* = 
    zt_backend/dist_app/*
    zt_backend/dist_dev/*
    zt_backend/tests/*
    zt_frontend/*

[options.extras_require]
test =
    pytest==8.3.3
    selenium==4.24.0
components =
    pandas<=2.2.3
    plotly<=5.24.1
    pygwalker<=0.4.9.13
    openai<=1.59.5
    matplotlib<=3.9.4

[options.entry_points]
console_scripts = 
    zero-true = zt_cli.cli:cli_app
    zero-true-dev = zt_dev_cli.cli:cli_app

[options.package_data]
# Explicitly include only required files
* =
    LICENSE
    README.md


